fix: get survey unit to review